-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 13
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225899 | 14 | Aleksey Shipilev | P1 | Resolved | Fixed | team |
x86_32:
/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/arguments.cpp: In static member function 'static void Arguments::set_heap_size()':
/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/globals_extension.hpp:33:32: error: 'Flag_UseCompressedOops_enum' was not declared in this scope
#define FLAG_MEMBER_ENUM(name) Flag_##name##_enum
^
... (rest of output omitted)
/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/arguments.cpp: In static member function 'static void Arguments::set_heap_size()':
/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/runtime/globals_extension.hpp:33:32: error: 'Flag_UseCompressedOops_enum' was not declared in this scope
#define FLAG_MEMBER_ENUM(name) Flag_##name##_enum
^
... (rest of output omitted)
- backported by
-
JDK-8225899 32-bit build failures after JDK-8222252
-
- Resolved
-
- relates to
-
JDK-8222252 Java ergonomics limits heap to 128GB with disabled compressed oops
-
- Resolved
-