8225104: 32-bit build failures after JDK-8222252

Reviewed-by: bobv, rkennke, dholmes